Fix hero article image alignment by changing float property

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -64,6 +64,7 @@ article {
     display: block;
     width: 100%;
     height: auto;
+    float: left;
 }
 
 h1 {
